fix: add missed flex-wrap attribute

--- a/image-gallery/style.css
+++ b/image-gallery/style.css
@@ -98,6 +98,7 @@ input {
 	padding: 1.5rem;
 	
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-evenly;
 	align-items: center;
 	align-content: flex-start;
